--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,25 @@
-.body {
+body {
     background-color: #efc050;
 }
 
-.title {
-    color: #45B8AC;
-    font: 'pacifico';
+title {
+    font-family: Pacifico, Arial, sans-serif;
+    text-align: center;
+    font-weight: bold;
 }
 
-.p.link {
+img {
+    height: 500px;
+    width: auto;
+}
+
+p{
     color: white;
-    font: 'pacifico';
-    background-color: #5b5ea6;        
+    font-family: Pacifico, Arial, sans-serif;
+}
+
+.link {
+    font-weight: bold;
+    background-color: #45B8AC;        
 }
 
